Fix spacing on bio headers

--- a/styles/medium.less
+++ b/styles/medium.less
@@ -90,6 +90,14 @@
   .lead(1.625em);
 }
 
+.large, h2 {
+  .lead(1.625em);
+}
+
+#bio address {
+  .lead(1em, 1.625em);
+}
+
 @media screen and (min-width: 40em) {
   body {
     .lead(1em);
